# toy-models-of-superposition-jax

./: .gitignore  .pre-commit-config.yaml  README.md  make.py  plot.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml  feature-geometry.toml  intro-figure.toml  varying-sparsity.toml
notes/: README.md
results/: README.md
