[project]
name = "toy-models-of-superposition-jax"
version = "0.1.0"
description = "A replication of Antropic's 'Toy Models of Superposition' in JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "jax>=0.4.0",
    "matplotlib>=3.9.4",
    "optax>=0.2.4",
    "safetensors>=0.5.3",
    "tqdm>=4.67.1",
]
